# hear_buds

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  DEVICE_TEST_CHECKLIST.txt  Dioxus.toml  NOTICE  README.md  clippy.toml
.github/workflows/: ci.yml
android/src/main/: AndroidManifest.xml
android/src/main/java/dev/dioxus/main/: HearBudsForegroundService.java
assets/: tailwind.css
assets/styling/: main.css
scripts/: build_android.ps1  build_android.sh  build_android_dsp.ps1  build_android_dsp.sh  deploy_android.ps1  deploy_android.sh  dev_android.ps1  dev_android.sh  dev_desktop.ps1  dev_desktop.sh  run_android.ps1  run_android.sh
src/: android_audio.rs  android_service.rs  dsp.rs  lib.rs  main.rs  permissions.rs  state.rs  sweep.rs
src/dsp/: android.rs  desktop.rs
src/views/: home.rs  mod.rs
